# taller1edd

./: CMakeLists.txt  README.md  main.cpp
clases/: Cancion.h
classes/: Cancion.cpp  Cancion.h  reproductor.cpp  reproductor.h
core/: lectura.cpp  lectura.h
data_structures/: Lista.cpp  Lista.h  Nodo.cpp  Nodo.h
